test/soya/error/cycle.soy
class pointa {
 attribute pointb val;

  method void constructor (pointb val){
    this.val = val;
  }

}

class pointb {
 attribute pointa val;

  method void constructor (pointa val){
    this.val = val;
  }

}

function void main() {
  putchar(48);
}
